# reservation

./: .pre-commit-config.yaml  README.md  config.toml  deny.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: build.yml  code-check.yml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: config.rs  errors.rs  lib.rs  utils.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/types/: reservation.rs  reservation_query.rs  reservation_status.rs
migrations/: 20240321101246_init.down.sql  20240321101246_init.up.sql  20240322022546_reservation.up.sql  20240322022932_reservation_trigger.down.sql  20240322022932_reservation_trigger.up.sql  20240322030425_reservation_func.down.sql  20240322030425_reservation_func.up.sql
reservation/: Cargo.toml
reservation/src/: errors.rs  lib.rs  manager.rs
service/: Cargo.toml
service/src/: lib.rs  main.rs  service.rs
service/tests/: service.rs
