[package]
name = "abi"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", default-features = false }
derive_builder = "0.20.0"
prost = "0.12.3"
prost-types = "0.12.3"
regex = "1.10.4"
sqlx = { version = "0.7.4", features = ["postgres", "chrono"] }
thiserror = "1.0.58"
tonic = { version = "0.11.0", features = ["gzip"] }
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"

[build-dependencies]
tonic-build = "0.11.0"
