[package]
name = "reservation"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.4", features = [
    "postgres",
    "chrono",
    "uuid",
    "runtime-tokio-rustls",
] }
abi = { path = "../abi" }
thiserror = "1.0.58"
chrono = { version = "0.4.35", features = ["serde"] }
tokio = { version = "1.36.0", features = ["sync"] }
tokio-stream = "0.1.15"

[dev-dependencies]
sqlx = { version = "0.7.4", features = ["migrate"] }
tokio = { version = "1.36.0", features = ["full"] }
