[package]
name = "reservation-service"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
anyhow = "1.0.81"
reservation = { version = "0.1.0", path = "../reservation" }
serde = { version = "1.0.197", features = ["derive"] }
shellexpand = "3.1.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tonic = { version = "0.11.0", features = ["gzip", "tls"] }

[dev-dependencies]
dotenvy = "0.15.7"
sqlx = "0.7.4"
